Minor css bugfix - Missing identity visibility change from rlp

--- a/useroperations/static/useroperations/css/base.css
+++ b/useroperations/static/useroperations/css/base.css
@@ -83,6 +83,14 @@ body {
     width: 255px;
 }
 
+#id_identity{
+    visibility:hidden;
+}
+
+label[for=id_identity]{
+    visibility:hidden;
+}
+
 .cookie-container {
     z-index: 100;
     position: fixed;
